<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>lt.lb.commons</groupId>
    <artifactId>Commons</artifactId>
    <version>local-jar</version>
    <packaging>pom</packaging>
    <properties>
        <project.production.version>${project.version}</project.production.version>
        
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        
        <apache.commons.version>3.9</apache.commons.version>
        <unchecked.utils.version>2021.09v1</unchecked.utils.version>
        <javafx.compat.version>11</javafx.compat.version>
    </properties>
    <name>CommonsLB</name>
    <modules>
        <module>commonslb-core</module>
        <module>commonslb-iteration</module>
        <module>commonslb-misc</module>
        <module>commonslb-datasync</module>
        <module>commonslb-collections</module>
        <module>commonslb-caching</module>
        <module>commonslb-log</module>
        <module>commonslb-lexing</module>
        <module>commonslb-refmodel</module>
        <module>commonslb-javafx</module>
        <module>commonslb-threads</module>
        <module>commonslb-io</module>
        <module>commonslb-rows</module>
        <module>commonslb-graphtheory</module>
        <module>commonslb-jpa</module>
        <module>commonslb-reflection</module>
        <module>commonslb-email</module>
        <module>commonslb-tests</module>
    </modules>
    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>
    
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>lt.lb.commons</groupId>
                <artifactId>commonslb-core</artifactId>
                <version>${project.production.version}</version>
            </dependency>
            <dependency>
                <groupId>lt.lb.commons</groupId>
                <artifactId>commonslb-iteration</artifactId>
                <version>${project.production.version}</version>
            </dependency>
            <dependency>
                <groupId>lt.lb.commons</groupId>
                <artifactId>commonslb-misc</artifactId>
                <version>${project.production.version}</version>
            </dependency>
            <dependency>
                <groupId>lt.lb.commons</groupId>
                <artifactId>commonslb-datasync</artifactId>
                <version>${project.production.version}</version>
            </dependency>
            <dependency>
                <groupId>lt.lb.commons</groupId>
                <artifactId>commonslb-rows</artifactId>
                <version>${project.production.version}</version>
            </dependency>
            <dependency>
                <groupId>lt.lb.commons</groupId>
                <artifactId>commonslb-collections</artifactId>
                <version>${project.production.version}</version>
            </dependency>
            <dependency>
                <groupId>lt.lb.commons</groupId>
                <artifactId>commonslb-lexing</artifactId>
                <version>${project.production.version}</version>
            </dependency>
            <dependency>
                <groupId>lt.lb.commons</groupId>
                <artifactId>commonslb-io</artifactId>
                <version>${project.production.version}</version>
            </dependency>
            <dependency>
                <groupId>lt.lb.commons</groupId>
                <artifactId>commonslb-threads</artifactId>
                <version>${project.production.version}</version>
            </dependency>
            <dependency>
                <groupId>lt.lb.commons</groupId>
                <artifactId>commonslb-jpa</artifactId>
                <version>${project.production.version}</version>
            </dependency>
            <dependency>
                <groupId>lt.lb.commons</groupId>
                <artifactId>commonslb-refmodel</artifactId>
                <version>${project.production.version}</version>
            </dependency>
            <dependency>
                <groupId>lt.lb.commons</groupId>
                <artifactId>commonslb-javafx</artifactId>
                <version>${project.production.version}</version>
            </dependency>
            <dependency>
                <groupId>lt.lb.commons</groupId>
                <artifactId>commonslb-reflection</artifactId>
                <version>${project.production.version}</version>
            </dependency>
            <dependency>
                <groupId>lt.lb.commons</groupId>
                <artifactId>commonslb-email</artifactId>
                <version>${project.production.version}</version>
            </dependency>
            <dependency>
                <groupId>lt.lb.commons</groupId>
                <artifactId>commonslb-tests</artifactId>
                <version>${project.production.version}</version>
            </dependency>
            <dependency>
                <groupId>lt.lb.commons</groupId>
                <artifactId>commonslb-log</artifactId>
                <version>${project.production.version}</version>
            </dependency>
            <dependency>
                <groupId>lt.lb.commons</groupId>
                <artifactId>commonslb-jobs</artifactId>
                <version>${project.production.version}</version>
            </dependency>
            <dependency>
                <groupId>lt.lb.commons</groupId>
                <artifactId>commonslb-caching</artifactId>
                <version>${project.production.version}</version>
            </dependency>
            
            <dependency>
                <groupId>lt.lb.commons</groupId>
                <artifactId>commonslb-graphtheory</artifactId>
                <version>${project.production.version}</version>
            </dependency>
            
            <dependency>
                <groupId>com.github.laim0nas100</groupId>
                <artifactId>FastID</artifactId>
                <version>1.0.1</version>
            </dependency>
            
            <dependency>
                <groupId>com.github.laim0nas100</groupId>
                <artifactId>UncheckedUtils</artifactId>
                <version>${unchecked.utils.version}</version>
            </dependency>
            
            
            <dependency>
                <groupId>javax.persistence</groupId>
                <artifactId>javax.persistence-api</artifactId>
                <version>2.2</version>
                <scope>provided</scope>
            </dependency>
            
            
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${apache.commons.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-collections4</artifactId>
                <version>4.3</version>
            </dependency>
            
            <dependency>
                <groupId>javax.mail</groupId>
                <artifactId>javax.mail-api</artifactId>
                <version>1.6.1</version>
                <scope>provided</scope>
            </dependency> 
            
            
            <dependency>
                <groupId>com.github.ben-manes.caffeine</groupId>
                <artifactId>caffeine</artifactId>
                <version>2.6.2</version>
            </dependency>
        
            <dependency>
                <groupId>uk.com.robust-it</groupId>
                <artifactId>cloning</artifactId>
                <version>1.9.10</version>
                <scope>test</scope>
            </dependency>    
            
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-api</artifactId>
                <version>2.13.3</version>
            </dependency>
            
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>2.7</version>
            </dependency>
            
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-text</artifactId>
                <version>1.9</version>
            </dependency>

            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.13.2</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-help-plugin</artifactId>
                <version>3.2.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>attach-javadocs</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    
</project>
